# openpli-enigma2-sh4

./: configure.ac  e2reactor.py  enigma2.bb  mytest.py  skin.py  timer.py
data/: Makefile.am  encoding.conf  iso-639-3.tab  keymap.xml  unicable.xml
data/display/: skin_text_default.xml
data/rc_models/: Makefile.am  atevio7500.xml  rc_models.cfg  spark.xml  ufs912.xml  vitamin.xml
lib/actions/: action.cpp
lib/driver/: rc.cpp  (+3 more)
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/HdmiCEC/: plugin.py
lib/python/Plugins/SystemPlugins/OSDPositionSetup/: overscanwizard.py  plugin.py
lib/python/Plugins/SystemPlugins/PositionerSetup/: plugin.py
lib/python/Plugins/SystemPlugins/SH4BoosterControl/: plugin.py
lib/python/Plugins/SystemPlugins/SH4OSDAdjustment/: plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: plugin.py
lib/python/Plugins/SystemPlugins/SparkVFDControl/: plugin.py
lib/python/Plugins/SystemPlugins/VFD-Icons/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/VFD-Icons/meta/: plugin_vfd-icons.xml
lib/python/Plugins/SystemPlugins/VideoEnhancement/: plugin.py
lib/python/Plugins/SystemPlugins/Videomode/: VideoHardware.py  VideoWizard.py  plugin.py
main/: Makefile.am  bsod.cpp  enigma.cpp
po/: ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ku.po  lt.po  lv.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po  vi.po  zh_CN.po  (+1 more)
tools/: enigma2.sh.in
(+92 files in other folders)
